# MxxCrm

./: .gitignore  README.md  compile_errors.txt  db_schema_actual.txt  index.vue  schema_comparison_report.md
backend/: .gitignore  Cargo.toml  cargo_errors.txt
backend/config/: config.ini  log4rs.yaml
backend/locales/: zh-CN.yml
backend/scripts/: create_statistics_plan_tables.sql  insert_statistics_menus.sql  insert_statistics_plan_menu.sql  update_statistics_menu_names.sql
backend/sql/: check_db.sql  create_contract_approval_log.sql  describe_menu.sql  fix_approval_time_columns.sql  insert_contract_approval_demo.sql  insert_dept_buttons.sql  insert_post_dict_notice_buttons.sql  query_dept_menus.sql  query_menus.sql
backend/src/: embed_frontend.rs  main.rs
backend/src/core/: mod.rs
backend/src/core/constant/: mod.rs  user_const.rs
backend/src/core/enum/: activity_type_enum.rs  contract_status_enum.rs  contract_type_enum.rs  currency_code_enum.rs  customer_level_enum.rs  industry_enum.rs  industry_type_enum.rs  lead_source_enum.rs  lead_status_enum.rs  menu_enums.rs  mod.rs  opportunity_stage_enum.rs  payment_method_enum.rs  payment_status_enum.rs  purchase_status_enum.rs
backend/src/core/errors/: error.rs
backend/src/core/kit/: app.rs  column.rs  config.rs  db.rs  elasticsearch.rs  global.rs  jwt_util.rs  mod.rs  redis.rs  template.rs  user_auth.rs
backend/src/core/middleware/: mod.rs  web_open.rs
backend/src/core/system_macro/: mod.rs  return_macro.rs
backend/src/core/web/: base_controller.rs  mod.rs  response.rs
backend/src/core/web/entity/: common.rs  mod.rs  page.rs
backend/src/core/web/tags/: common_tags.rs  format_time_tags.rs  i18n_tags.rs  mod.rs
backend/src/modules/: mod.rs
backend/src/modules/approval/: mod.rs
backend/src/modules/approval/entity/: approval_flow.rs  approval_flow_edge.rs  approval_flow_node.rs  approval_instance.rs  approval_log.rs  mod.rs
backend/src/modules/approval/model/: approval.rs
backend/src/modules/approval/service/: approval_service.rs  mod.rs
backend/src/modules/articles/: mod.rs
backend/src/modules/company/: mod.rs
backend/src/modules/finance/: README.md  finance_commission_tables.sql  finance_menu_and_test_data.sql  finance_tables.sql  member_product_table.sql  mod.rs
backend/src/modules/inventory/: mod.rs
backend/src/modules/purchase/: mod.rs
backend/src/modules/search/: mod.rs
backend/src/modules/shop/: mod.rs
backend/src/modules/storage/: mod.rs
backend/src/modules/system/: mod.rs
backend/src/modules/upload/: mod.rs
backend/src/modules/user/: mod.rs
backend/src/modules/website/: mod.rs
backend/src/routes/: admin_routes.rs  merchant_routes.rs  mod.rs  open_routes.rs  user_routes.rs
backend/src/utils/: auth.rs  domain_utils.rs  encryption_utils.rs  file_utils.rs  mod.rs  response.rs  short_code.rs  snowflake.rs  snowflake_id_utils.rs  string_utils.rs  time_utils.rs
(+769 files in other folders)
