[package]
name = "mxx-saas"
version = "1.0.0"
edition = "2021"
default-run = "mxx-saas"
authors = ["sun kaifei"]

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1"
actix-web = { version = "4.13.0", default-features = false, features = ["cookies","macros"] }
actix-service = "2.0.3"
actix-web-lab = "0.26.0"
actix-http = "3.12.1"
actix-redis = "0.13.1"
actix-cors = "0.7.1"
actix-files = "0.6.10"
actix-multipart = "0.7.2"
actix-web-grants = "4.1.2"
actix-web-httpauth = "0.8.2"
actix-rt = "2.11.0"

futures-util = "0.3.32"
futures = { version = "0.3.32", default-features = false }
dark-std = "0.2.16"

json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
rmp-serde = "1.3.0"
serde_with = "3.18.0"
validator = { version = "0.20.0", features = ["derive"] }

log = "0.4.29"
log4rs = "1.4.0"
sea-orm = {version = "2.0.0-rc.40", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time", "with-uuid", "with-json" ]}
sea-orm-migration = "2.0.0-rc.40"
sea-query = "1.0.1"
sea-query-attr = "0.1.3"

rust-ini = "0.21.3"
rust-embed = "8.11.0"
rust_html = "1.1.6"
rust_decimal = "1.39.0"

jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

base64 = "0.22.1"
thiserror = "2.0.18"

redis = { version = "1.2.0", features = [
    "tokio-comp",
    "connection-manager",
    "tokio-rustls-comp",
] }

argon2 = { version = "0.5.0", features = ["password-hash"] }
uuid = { version = "1.23.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
minijinja = { version = "2.9.0", features = ["loader"] }
minijinja-autoreload = { version = "2.9.0" }
rand = "0.8"
sha2 = "0.11.0"
hex = "0.4"
md5 = "0.8.0"

openssl = { version = "0.10", features = ["vendored"] }
aes-gcm = "0.10"
sqids = "0.4"

chrono = { version = "0.4.40", features = ["unstable-locales"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }

image = { version = "0.25.10", features = ["webp"] }
webp = "0.3.1"
zip = "0.6.4"

regex = "1.12.3"
failure = "0.1.8"
pinyin = "0.11.0"
scraper = "0.27.0"
captcha = "1.0.0"

proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

jieba-rs = "0.9.0"
bytes = "1.10.1"

config = "0.15.22"
rust-crypto = "0.2.36"
bcrypt = "0.19.1"

smcrypto = "0.3.1"

sanitize-filename = "0.7.0-beta"
headers = "0.4.1"
rust-i18n = "4.0.0"
time = "0.3.47"

anyhow = "1.0.102"
parking_lot = "0.12.5"

qiniu-sdk = "0.2.4"

tokio-cron-scheduler = "0.15.1"

walkdir = "2.5.0"

elasticsearch = { version = "9.1.0-alpha.1", optional = true }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[features]
default = []
enable-es = ["elasticsearch"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false